2005-05-03  Alasdair Allan <aa@astro.ex.ac.uk>

	* Import into Sourceforge CVS

2005-04-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version.