@@ -4,7 +4,7 @@
 use strict;
 
 #load test
-use Test::More tests => 64;
+use Test::More tests => 3;
 
 # load modules
 BEGIN {
@@ -21,70 +21,18 @@ ok(1);
 
 # read from data block
 my @buffer = <DATA>;
-chomp @buffer;        
+chomp @buffer;  
+
+my $xml = "";
+foreach my $i ( 0 ... $#buffer ) {
+   $xml = $xml . $buffer[$i];
+}   
 
 my $object = new Astro::VO::VOEvent();
+my $id = $object->determine_id( XML => $xml );
 
-my $address = "Los Alamos National Laboratory,\n" .
-              "PO Box 1663,\nISR-1, MS B244,\n" .
-              "Los Alamos, NM 87545";
-              
-my $document = $object->build( 
-     Role => 'test',
-     ID   => 'ivo://raptor.lanl/23456789/',
-     Description => 'This is some human readable text.',
-     Who => { Publisher => 'ivo://raptor.lanl',
-                   Date => '2005-04-15T14:34:16',
-                   Contact => { Name => 'Robert White',
-                                Institution => 'LANL',
-                                Address => $address,
-                                Telephone => '+1-505-665-3025',
-                                Email => 'rwhite@lanl.gov' } },
-     Citations => [ { ID => 'ivo://raptor.lanl/98765432/', 
-                      Cite => 'supercedes' },
-                    { ID => 'ivo://estar.org/1234567/aa/', 
-                      Cite => 'associated' } ],
-     WhereWhen => { RA => '148.888', Dec => '69.065', Error => '4',
-                    Time => '2005-04-15T23:59:59', TimeError => '30' },  
-     How => { Name => 'Raptor AB', Location => 'Los Alamos',
-              RTML => 'http://www.raptor.lanl.gov/documents/phase_zero.html' },
-     What => [ { Group => [ { Name  => 'magnitude',
-                              UCD   => 'phot.mag:em.opt.R',
-                              Value => '13.2',
-			      Units => 'mag' },
-                            { Name  => 'error',
-                              UCD   => 'phot.mag:stat.error',
-                              Value => '0.1',
-			      Units => 'mag' } ] },
-               { Group => [ { Name  => 'magnitude',
-                              UCD   => 'phot.mag:em.opt.V',
-                              Value => '12.5',
-			      Units => 'mag' },
-                            { Name  => 'error',
-                              UCD   => 'phot.mag:stat.error',
-                              Value => '0.1',
-			      Units => 'mag' } ] },
-               { Name  => 'seeing',
-                  UCD   => 'instr.obsty.site.seeing',
-                  Value => '2',
-                  Units => 'arcsec' },
-               { Name  => 'misc',
-                 UCD   => 'misc.junk',
-                 Value => 'unknown' } ],
-       Why  => { Classification => { 
-                           Probability  => '30', Type  => 'ot',
-                           Description => 'Fast Orphan Optical Transient' },
-                        Identification => { 
-                           Type => 'associated', Description => 'NGC1234' } }
-                                   
-    );
+is( $id, "ivo://raptor.lanl/23456789/", "comparing ID strings" );
 
-print "\n\n$document\n\n";
-                  
-my @xml = split( /\n/, $document );
-foreach my $i ( 0 ... $#buffer ) {
-   is( $xml[$i], $buffer[$i], "comparing line $i in XML document" );
-}
 
 # T I M E   A T   T H E   B A R ---------------------------------------------
 
