@@ -1,6 +1,7 @@
-2005-05-03  Alasdair Allan <aa@astro.ex.ac.uk>
+2005-07-27  Alasdair Allan <aa@astro.ex.ac.uk>
 
-	* Import into Sourceforge CVS
+        * VOEvent.pm: Support for "simple" positions, synced with RAPTOR
+	  parser for interoperability between the networks.
 
 2005-04-22  Alasdair Allan <aa@astro.ex.ac.uk>
 
